--- a/dos33.html
+++ b/dos33.html
@@ -169,6 +169,11 @@ a.d { /* data http://stackoverflow.com/questions/448981/which-characters-are-val
     font-weight: normal;   /* remove bold */
 /* font-style: italic; /* optional italic for data */
 }
+a.file {
+    color: #F00;           /* FILE = Red */
+    text-decoration: none; /* remove underlink from data link */
+    font-weight: normal;   /* remove bold */
+}
 span.data {
     color: #040;
 }
@@ -1253,23 +1258,23 @@ TODO:
                     193 *  BOUNDARY.              *
                     194 *                         *
                     195 * NBUF2 (86 BYTES) MUST   *                                 ; Incorrect: It must _not_ CROSS
-                    196 *  BE ALIGNED ON A PAGE   *                                 ; a page boundary. It can be
-                    197 *  BOUNDARY.              *                                 ; anywhere *within* the page.
-                    198 *                         *                                 ;
-                    199 ***************************                                 ; *sigh* Let's waste an *entire* sector with
-                    200 *                                                           ; 342 disk nibbles of raw 96 96 96 data,
-3B00:00 00 00 00    201 <i><a name="NBUF1"      id="NBUF1"      >NBUF1       </a></i>DS 256,0        ;NBUF1                          ; when _10 bytes_ would do the job IF NUBF1 == $BF00
-3B04:00 00 00 00                                                                    ;    LDA #0
-3B08:00 00 00 00                                                                    ;    LDY #0
-3B0C:00 00 00 00                                                                    ;.1  STA NBUF1,Y
-3B10:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00                                ;    INY
-3B20:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00                                ;    BNE .1
-3B30:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
-3B40:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
-3B50:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
-3B60:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
-3B70:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
-3B80:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
+                    196 *  BE ALIGNED ON A PAGE   *                                 ; a page boundary. Technically, It can be
+                    197 *  BOUNDARY.              *                                 ; anywhere *within* the page. But then the
+                    198 *                         *                                 ; code at <a class="file" href="#WRITRTN">WRITRTN</a>, Line #<span class="line">80</span> needs fixing up.
+                    199 ***************************                                 ;
+                    200 *                                                           ;
+3B00:00 00 00 00    201 <i><a name="NBUF1"      id="NBUF1"      >NBUF1       </a></i>DS 256,0        ;NBUF1                          ; === <b class="ts">T0$5</b> ===
+3B04:00 00 00 00                                                                    ; *sigh* Let's waste an *entire* sector
+3B08:00 00 00 00                                                                    ; with 342 disk nibbles of raw 96 nibbles
+3B0C:00 00 00 00                                                                    ; PLUS the time decoding it
+3B10:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00                                ; when _9 bytes_ would do
+3B20:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00                                ; the job IF NUBF1 == $BF00
+3B30:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00                                ;
+3B40:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00                                ;    LDA #0
+3B50:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00                                ;    TAY
+3B60:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00                                ;.1  STA NBUF1,Y
+3B70:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00                                ;    INY
+3B80:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00                                ;    BNE .1
 3B90:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 3BA0:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 3BB0:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
@@ -1277,12 +1282,13 @@ TODO:
 3BD0:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 3BE0:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 3BF0:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
+;     0  1  2  3  4  5  6  7  8  9  A  B  C  D  E  F
 
-3C00:00 00 00 00    202 <i><a name="NBUF2"      id="NBUF2"      >NBUF2       </a></i>DS  86,0        ;NBUF2                          ; *sigh* more wasted disk space 
-3C04:00 00 00 00
-3C08:00 00 00 00
-3C0C:00 00 00 00
-3C10:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
+3C00:00 00 00 00    202 <i><a name="NBUF2"      id="NBUF2"      >NBUF2       </a></i>DS  86,0        ;NBUF2                          ;  === <b class="ts">T0$5</b> ===
+3C04:00 00 00 00                                                                    ; *sigh* more wasted disk space
+3C08:00 00 00 00                                                                    ; pack code THEN data
+3C0C:00 00 00 00                                                                    ; as interleaving it just
+3C10:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00                                ; wastes memory
 3C20:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 3C30:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 3C40:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
@@ -1299,8 +1305,8 @@ TODO:
 3C5F:A9 FF          057             LDA #$<span class="adr">FF</span>        SELF-SYNC NIBL.
 3C61:9D 8F C0       058             STA <a class="d" href="#Q7H"   >Q7H</a>,X       WRITE FRIST NIBL.
 3C64:DD 8C C0       059             CMP <a class="d" href="#Q6L"   >Q6L</a>,X       (4) BACK TO WRITE MODE.
-3B67:48             060             PHA             (3) FOR DELAY
-3B68:68             061             PLA             (4)
+3C67:48             060             PHA             (3) FOR DELAY
+3C68:68             061             PLA             (4)
 
 
 
