--- a/dos33.html
+++ b/dos33.html
@@ -4,6 +4,7 @@
 <a name="BEGIN"      id="BEGIN"      >BEGIN       </a>
                         25          37              53                              85  89  93
 ####:## ## ##       ### LABEL       NMEMONIC        COMMENT                         ; Annotation
+
                     001 
                     002 
                     003 
@@ -347,11 +348,11 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     032             INCLUDE <a href="#WRITADR">WRITADR</a>,,1
                     033             INCLUDE <a href="#RWTSONE">RWTSONE</a>,,1
                     034             INCLUDE <a href="#RWTSTWO">RWTSTWO</a>,,1
-                    035             INCLUDE <a href="#FORMATR">FORMATR</a>,,1
-                    036             INCLUDE DOSPTCH,,1
+                    035             INCLUDE <a href="#FORMATR">FORMATR</a>,,1       ; $3EAF .. $3FC7
+                    036             INCLUDE <a href="#DOSPTCH">DOSPTCH</a>,,1       ; $3FC8 .. $3FFF
 
 
-<hr>; === <b class="file"><a name="RELOCTR">RELOCTR</a></b> - Relocate DOS to high (48K) memory, Page <span class="page">110</span>, <b class="ts">T0$A</b>, $<span class="adr">1B00</span> ===<hr>
+<hr>; === <a class="file" name="RELOCTR">RELOCTR</a> - Relocate DOS to high (48K) memory, Page <span class="page">110</span>, <b class="ts">T0$A</b>, $<span class="adr">1B00</span> ===<hr>
                     001             PAGE
                     002 *****************************************************
                     003 *                                                   *
@@ -665,7 +666,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     337             PAGE
 
 
-<hr>; === <b class="file"><a name="DOSINIT">DOSINIT</a></b> - Command Tables and Interpreter, Page <span class="page">48</span>, <b class="ts">T0$C</b>, $<span class="adr">9D00</span> ===<hr>
+<hr>; === <a class="file" name="DOSINIT">DOSINIT</a> - Command Tables and Interpreter, Page <span class="page">48</span>, <b class="ts">T0$C</b>, $<span class="adr">9D00</span> ===<hr>
                     001 HEREL       EQU &gt;*
                     002 REMDR       EQU 256-HEREL
                     003             ORG *+REMDR
@@ -692,10 +693,10 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1D8B:8D 6A 2A       101             STA CS          ; SET AS CUURENT SLOT           ; *spelling*
 
 
-<hr>; === <b class="file"><a name="DOSHOOK">DOSHOOK</a></b> - Input / Output Vector, Page <span class="page">44</span>,  <b class="ts">T?S?</b>, $<span class="adr">????</span> ===<hr>
+<hr>; === <a class="file" name="DOSHOOK">DOSHOOK</a> - Input / Output Vector, Page <span class="page">44</span>,  <b class="ts">T?S?</b>, $<span class="adr">????</span> ===<hr>
 
 
-<hr>; === <b class="file"><a name="CMDSCAN">CMDSCAN</a></b> - Scan for commands, Page <span class="page">16</span>,  <b class="ts">T?S?</b>, $<span class="adr">????</span> ===<hr>
+<hr>; === <a class="file" name="CMDSCAN">CMDSCAN</a> - Scan for commands, Page <span class="page">16</span>,  <b class="ts">T?S?</b>, $<span class="adr">????</span> ===<hr>
                     001             PAGE
                     002 ;
                     003 ; SCNCMD - SCAN A COMMAND
@@ -703,14 +704,14 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     005 <span class="todo">SCNCMD</span>EQU * <span class="todo">TODO</span>
 
 
-<hr>; === <b class="file"><a name="XOPNCLS">XOPNCLS</a></b> - Execute Open / Close, Page <span class="page">150</span>, <b class="ts">T?S?</b>, $<span class="adr">????</span> ===<hr>
+<hr>; === <a class="file" name="XOPNCLS">XOPNCLS</a> - Execute Open / Close, Page <span class="page">150</span>, <b class="ts">T?S?</b>, $<span class="adr">????</span> ===<hr>
                     001             PAGE
 
 
-<hr>; === <b class="file"><a name="XLODSAV">XLODSAV</a></b> - Execute Load / Save , Page <span class="page">140</span>,  <b class="ts">T?S?</b>, $<span class="adr">????</span> ===<hr>
+<hr>; === <a class="file" name="XLODSAV">XLODSAV</a> - Execute Load / Save , Page <span class="page">140</span>,  <b class="ts">T?S?</b>, $<span class="adr">????</span> ===<hr>
 
 
-<hr>; === <b class="file"><a name="DOSGOER">DOSGOER</a></b> - Print Error message, Page <i>40</i>, T?S?, $<span class="adr">????</span> ===<hr>
+<hr>; === <a class="file" name="DOSGOER">DOSGOER</a> - Print Error message, Page <i>40</i>, T?S?, $<span class="adr">????</span> ===<hr>
                     001             PAGE
                     002 ;
                     003 ; DOSGO - GOTO DOS
@@ -718,7 +719,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     005 <span class="todo">DOSGO</span>EQU * <span class="todo">TODO</span>
 
 
-<hr>; === <b class="file"><a name="BLDFTAB">BLDFTAB</a></b> - Build File Tables, Page <i>4</i>, <b class="ts">T1$6</b> @ $D4, $<span class="adr">####</span> ===<hr>
+<hr>; === <a class="file" name="BLDFTAB">BLDFTAB</a> - Build File Tables, Page <i>4</i>, <b class="ts">T1$6</b> @ $D4, $<span class="adr">####</span> ===<hr>
                     001             PAGE
                     002 ;
                     003 ; BLDFTB - BUILD FILE TABLES
@@ -743,7 +744,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     022 ;   SBUF PTR (2)
                     023 ;   LINK     (2)
                     024 ;
-27D4:               025 <b><a name="BLDFTB" id="BLDFTB">BLDFTB</a></b>      EQU *
+27D4:               025 <a name="BLDFTB"    id="BLDFTB"     >BLDFTB</a>      EQU *
 27D4:38             026             SEC
 27D5:AD 00 1D       027             LDA FTAB        ; START OF FTAB AREA    ; dosinit, 48
 27D8:85 40          028             STA ZPGWRK      ; IS 1ST FTB PTR        ; reloctr, 110
@@ -752,7 +753,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 27DF:AD 57 2A       031             LDA CNFTBS      ; MOVE NO FTABS         ; fdosent, 60
 27E2:8D 63 2A       032             STA TEMP1A      ; TO TEMP               ; fdosent, 60
                     033 ;
-27E5:A0 00          034 <b><a name="BFT1" id="BFT1"    >BFT1</a></b>        LDY #0
+27E5:A0 00          034 <a name="BFT1"      id="BFT1"       >BFT1</a>        LDY #0
 27E7:98             035             TYA
 27E8:91 40          036             STA (ZPGWRK),Y  ; 1ST CHAR FN=0
 27EA:A0 1E          037             LDY #30         ; INC Y TO FCB PTR
@@ -801,7 +802,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 2827:68             080             PLA             ; FOR NEXT ENTRY
 2828:85 40          081             STA ZPGWRK      ; BUILD
 282A:4C E5 27       082             JMP <a href="#BFT1">BFT1</a>                                ; ^
-282D:48             083 <b><a name="BFT2" id="BFT2"    >BFT2</a></b>        EQU *
+282D:48             083 <a name="BFT2"      id="BFT2"       >BFT2        </a>EQU *
 
                     ;
                     ; MVISW - MOVE INPUT SWITCH
@@ -810,7 +811,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                                 LDA INSW+1
 
 
-<hr>; === <b class="file"><a name="CMDTBLS">CMDTBLS</a></b> - Commands, Page <span class="page">21</span>, <b class="ts">T?$?</b>, $<span class="adr">####</span> ===<hr>
+<hr>; === <a class="file" name="CMDTBLS">CMDTBLS</a> - Commands, Page <span class="page">21</span>, <b class="ts">T?$?</b>, $<span class="adr">####</span> ===<hr>
                     001                 PAGE
                     002 ;
                     003 ; COMMAND NAME TABLE
@@ -820,7 +821,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     007             DCI "INIT"
 
 
-<hr>; === <b class="file"><a name="FDOSENT">FDOSENT</a></b> - External Entry Point, Page <span class="page">60</span>, <b class="ts">T?$?</b>, $<span class="adr">####</span> ===<hr>
+<hr>; === <a class="file" name="FDOSENT">FDOSENT</a> - External Entry Point, Page <span class="page">60</span>, <b class="ts">T?$?</b>, $<span class="adr">####</span> ===<hr>
                     001                 PAGE
                     002 ;
                     003 ; MISC BUT REQD CELLS
@@ -828,7 +829,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     005 CFTABA DDB 0 ; CURRENT FILE TABLE POINTER
 
 
-<hr>; === <b class="file"><a name="FOPCLRW">FOPCLRW</a></b> - Open; Close; Rename; Read, Page <span class="page">77</span>, <b class="ts">T?$?</b>, $<span class="adr">####</span> ===<hr>
+<hr>; === <a class="file" name="FOPCLRW">FOPCLRW</a> - Open; Close; Rename; Read, Page <span class="page">77</span>, <b class="ts">T?$?</b>, $<span class="adr">####</span> ===<hr>
                     001             PAGE
                     002 ;
                     003 ; FOPEN - OPEN A FILE
@@ -836,7 +837,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     005 FOPEN EQU *
 
 
-<hr>; === <b class="file"><a name="FDELCAT">FDELCAT</a></b> - Delete, Catalog, Page <span class="page">55</span>, <b class="ts">T?$?</b>, $<span class="adr">####</span> ===<hr>
+<hr>; === <a class="file" name="FDELCAT">FDELCAT</a> - Delete, Catalog, Page <span class="page">55</span>, <b class="ts">T?$?</b>, $<span class="adr">####</span> ===<hr>
                     001             PAGE
                     002 ;
                     003 * FLOCK - LOCK A FILE
@@ -844,7 +845,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     005 FLOCK LDA #$80
 
 
-<hr>; === <b class="file"><a name="FMTRWIO">FMTRWIO</a></b> - Execute Format Request, Page <span class="page">73</span>, <b class="ts">T?$?</b>, $<span class="adr">####</span> ===<hr>
+<hr>; === <a class="file" name="FMTRWIO">FMTRWIO</a> - Execute Format Request, Page <span class="page">73</span>, <b class="ts">T?$?</b>, $<span class="adr">####</span> ===<hr>
                     001             PAGE
                     002 ;
                     003 * FFMT - Execute Format Request
@@ -852,23 +853,23 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     005 FFMT EQU *
 
 
-<hr>; === <b class="file"><a name="FLOCNXB">FLOCNXB</a></b> - Locate Next Byte, Page <span class="page">68</span>, <b class="ts">T?$?</b>, $<span class="adr">####</span> ===<hr>
+<hr>; === <a class="file" name="FLOCNXB">FLOCNXB</a> - Locate Next Byte, Page <span class="page">68</span>, <b class="ts">T?$?</b>, $<span class="adr">####</span> ===<hr>
                     001             PAGE
                     002 ;
 
 
-<hr>; === <b class="file"><a name="FLOCSEC">FLOCSEC</a></b> - Locate Sector, Page <span class="page">68</span>, <b class="ts">T?$?</b>, $<span class="adr">####</span> ===<hr>
+<hr>; === <a class="file" name="FLOCSEC">FLOCSEC</a> - Locate Sector, Page <span class="page">68</span>, <b class="ts">T?$?</b>, $<span class="adr">####</span> ===<hr>
                     001             PAGE
                     002 ;
 
 
-<hr>; === <b class="file"><a name="FVCBUFS">FVCBUFS</a></b> - File Volume Catalog Buffers, Page <span class="page">?</span>, <b class="ts">T?$?</b>, $<span class="adr">????</span> ===<hr>
+<hr>; === <a class="file" name="FVCBUFS">FVCBUFS</a> - File Volume Catalog Buffers, Page <span class="page">?</span>, <b class="ts">T?$?</b>, $<span class="adr">????</span> ===<hr>
 
 
-<hr>; === <b class="file"><a name="BOOTLDR">BOOTLDR</a></b> - Boot loader, Page <span class="page">8</span>, <b class="ts">T0$0</b>, $<span class="adr">B600</span> ===<hr>
+<hr>; === <a class="file" name="BOOTLDR">BOOTLDR</a> - Boot loader, Page <span class="page">8</span>, <b class="ts">T0$0</b>, $<span class="adr">B600</span> ===<hr>
 
 
-<hr>; === <b class="file"><a name="COREQUS">COREQUS</a></b> - Core Equates, Page <span class="page">24</span>, <b class="ts">n/a</b>, $<span class="adr">n/a</span> ===<hr>
+<hr>; === <a class="file" name="COREQUS">COREQUS</a> - Core Equates, Page <span class="page">24</span>, <b class="ts">n/a</b>, $<span class="adr">n/a</span> ===<hr>
 
                     153 ************************
                     154 *                      *
@@ -894,10 +895,10 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     174 <a class="d" name="Q7H"        >Q7H         </a>EQU $C08F       Q7H,Q6H=WRITE STORE             ; DRIVE_MODE_W
 
 
-<hr>; === <b class="file"><a name="PRENIBL">PRENIBL</a></b> - Pre nibblize sector data for writing, Page <span class="page">104</span>, <b class="ts">T?$?</b>, $<span class="adr">????</span> ===<hr>
+<hr>; === <a class="file" name="PRENIBL">PRENIBL</a> - Pre nibblize sector data for writing, Page <span class="page">104</span>, <b class="ts">T?$?</b>, $<span class="adr">????</span> ===<hr>
 
 
-<hr>; === <b class="file"><a name="WRITRTN">WRITRTN</a></b> - Write Routine, Page <span class="page">137</span>, <b class="ts">T0$2</b>, $<span class="adr">B82A</span> ===<hr>
+<hr>; === <a class="file" name="WRITRTN">WRITRTN</a> - Write Routine, Page <span class="page">137</span>, <b class="ts">T0$2</b>, $<span class="adr">B82A</span> ===<hr>
                     001                 SBTL '16-SECTOR WRITE'
                     002 ************************
                     003 *                      *
@@ -1091,7 +1092,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     060                 SBTL '16-SECTOR READ'
 
 
-<hr>; === <b class="file"><a name="RDADSEK">RDADSEK</a></b> - Read Disk Address; Seek, Page <span class="page">106</span>, <b class="ts">T0$3</b> @ $44, $<span class="adr">B944</span>-<span class="adr">B9FC</span> ===<hr>
+<hr>; === <a class="file" name="RDADSEK">RDADSEK</a> - Read Disk Address; Seek, Page <span class="page">106</span>, <b class="ts">T0$3</b> @ $44, $<span class="adr">B944</span>-<span class="adr">B9FC</span> ===<hr>
                     001             SBTL '16-SECTOR READ ADDRESS'
 
                     054 * *
@@ -1100,8 +1101,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 3946:84 26          057 <!--                   -->            STY COUNT       'MUST FIND' COUNT.
 3948:C8             058 <a name="RDASYN"     >RDASYN      </a>INY
 
-<hr>
-39DA:A5 27          180             LDA <a class="d" hred="PRIOR"    >PRIOR</a>
+<hr>39DA:A5 27          180             LDA <a class="d" hred="PRIOR"    >PRIOR</a>
 39DC:18             181             CLC             ;CARRY CLEAR=PHASE OFF
 39DD:20 F1 39       182             JSR <a class="x" href="#CLRPHASE">CLRPHASE</a>    ;PHASE OFF
 39E0:BD 1D 3A       183             LDA <a class="d" href="#OFFTABLE">OFFTABLE</a>,Y  THEN WAIT 'OFFTIME'.
@@ -1126,7 +1126,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 39FA:A6 2B          202             LDX SLOTTEMP    ;RESTORE X-REG
 39FC:60             203 <a name="SEEKRTS"    >SEEKRTS     </a>RTS             ;AND RETURN                     ; /sarcasm I don't know what we would do without you Captain Obvious!
 
-<hr>; === <b class="file"><a name="MSWAITR">MSWAITR</a></b> - Microsecond wait routine, Page <span class="page">97</span>, <b class="ts">T0$4</b>-<b class="ts">T0$6</b> @ $55, $<span class="adr">BA00</span> - $<span class="adr">BC55</span> ===<hr>
+<hr>; === <a class="file" name="MSWAITR">MSWAITR</a> - Microsecond wait routine, Page <span class="page">97</span>, <b class="ts">T0$4</b>-<b class="ts">T0$6</b> @ $55, $<span class="adr">BA00</span> - $<span class="adr">BC55</span> ===<hr>
                     001                 SBTL '16-SECTOR MSWAIT'
                     002 **************************
                     003 *   MSWAIT SUBROUTINE    *
@@ -1317,7 +1317,7 @@ TODO:
 3C40:00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 3C50:00 00 00 00 00 00
 
-<hr>; === <b class="file"><a name="WRITADR">WRITADR</a></b> - Write Address, Page <span class="page">134</span>, <b class="ts">T0$6</b> @ $56, $<b class="adr">BC56</b>-<b class="adr">B???</b> ===<hr>
+<hr>; === <a class="file" name="WRITADR">WRITADR</a> - Write Address, Page <span class="page">134</span>, <b class="ts">T0$6</b> @ $56, $<b class="adr">BC56</b>-<b class="adr">B???</b> ===<hr>
                     001             SBTL '16-SECTOR WRITE ADDRESS'
 
 3C56:38             053 WADR16      SEC             ANTICIPATE WR PROT ERR.
@@ -1333,10 +1333,10 @@ TODO:
 
 
 
-<hr>; === <b class="file"><a name="RWTSONE">RWTSONE</a></b> - Read Write Track Sector - Part 1, Page <span class="page">124</span>, <b class="ts">T0$8</b>, $<b class="adr">B???</b>-<b class="adr">BE46</b> ===<hr>
+<hr>; === <a class="file" name="RWTSONE">RWTSONE</a> - Read Write Track Sector - Part 1, Page <span class="page">124</span>, <b class="ts">T0$8</b>, $<b class="adr">B???</b>-<b class="adr">BE46</b> ===<hr>
                     001             STBL '16-SECTOR RWTS'
 
-<hr>; === <b class="file"><a name="RWTSTWO">RWTSTWO</a></b> - Read Write Track Sector - Part 2, Page <span class="page">124</span>, <b class="ts">T0$8</b>, $<b class="adr">BE47</b> ===<hr>
+<hr>; === <a class="file" name="RWTSTWO">RWTSTWO</a> - Read Write Track Sector - Part 2, Page <span class="page">124</span>, <b class="ts">T0$8</b>, $<b class="adr">BE47</b> ===<hr>
                     001 *
                     002 * DISK IS NOW UP TO SPEED: READ IT!
                     003 * NOW CHECK: IF IT IS NOT THE FORMAT DISK COMMAND,
@@ -1611,11 +1611,11 @@ TODO:
 3EA4:30 05          298             BMI <a href="#ONDRV1">ONDRV1</a>      ;IF ON DRIVE 1(1), DRIVNO MINUS
 3EA6:99 F8 04       299             STA DRV2TRK,Y
 3EA9:10 03          300             BPL <a href="#SETRTS">SETRTS</a>
-3EAB:99 78 04       301 <a name="ONDRV1"     id="ONDRV1"     >ONDRV1      </a>STA DRV1TRK,Y
-3EAE:60             302 <a name="SETRTS"     id="SETRTS"     >SETRTS      </a>RTS
+3EAB:99 78 04       301 <a name="ONDRV1"     id="ONDRV1"    >ONDRV1      </a>STA DRV1TRK,Y
+3EAE:60             302 <a name="SETRTS"     id="SETRTS"    >SETRTS      </a>RTS
 
 
-<hr>; === <b class="file"><a name="FORMATR">FORMATR</a></b> - Format Disk, Page <span class="page">82</span>, <b class="ts">T0$8</b> @ $AF..  <b class="ts">T0$9</b> @ $C7, $<span class="adr">BEAF</span>-<span class="adr">BFC7</span> ===<hr>
+<hr>; === <a class="file" name="FORMATR">FORMATR</a> - Format Disk, Page <span class="page">82</span>, <b class="ts">T0$8</b> @ $AF..  <b class="ts">T0$9</b> @ $C7, $<span class="adr">BEAF</span>-<span class="adr">BFC7</span> ===<hr>
                     001                SBTL '16-SECTOR FORMATTER'
                     002 ****************************
                     003 *                          *
