--- a/dos33.html
+++ b/dos33.html
@@ -4,6 +4,17 @@
 <a name="BEGIN"      id="BEGIN"      >BEGIN       </a>
                         25          37              53                              85  89  93
 ####:## ## ##       ### LABEL       NMEMONIC        COMMENT                         ; Annotation
+Page
+     10  20  30  40  50  60  70  80  90 100 110 120 130 140 150
+  1  11  21  31  41  51  61  71  81  91 101 111 121 131 141 151
+  2  12  22  32  42  52  62  72  82  92 102 112 122 132 142 152
+  3  13  23  33  43  53  63  73  83  93 103 113 123 133 143 153
+  4  14  24  34  44  54  64  74  84  94 104 114 124 134 144 154
+  5  15  25  35  45  55  65  75  85  95 105 115 125 135 145 155
+  6  16  26  36  46  56  66  76  86  96 106 116 126 136 146 156
+  7  17  27  37  47  57  67  77  87  97 107 117 127 137 147 157
+  8  18  28  38  48  58  68  78  88  98 108 118 128 138 148 158
+  9  19  29  39  49  59  69  79  89  99 109 119 129 139 149 159
 
                     001 
                     002 
@@ -1756,10 +1767,10 @@ TODO:
                     019 <a name="SDP1"       >SDP1        </a>EQU *                                           ; Start Dos Patch
                     020 <a name="RCPATCH"    >RCPATCH     </a>EQU *                                           ; <span class="todo">TODO</span> called from?
 3FC8:20 93 FE       021             JSR SETVID
-3FCB:AD 81 C0       022             LDA $C081                                       ; ROMIN = $C081 for Language Card (LC)
-3FCE:AD 81 C0       023             LDA $C081                                       ; 1st read = read ROM, 2nd read = write enable LC Bank 2
+3FCB:AD 81 C0       022             LDA $<span class="adr">C081</span>                                       ; ROMIN = $C081 for Language Card (LC)
+3FCE:AD 81 C0       023             LDA $<span class="adr">C081</span>                                       ; 1st read = read ROM, 2nd read = write enable LC Bank 2
 3FD1:A9 00          024             LDA #0
-3FD3:8D 00 E0       025             STA $E000                                       ; *sigh* Forces Language Card to reload
+3FD3:8D 00 E0       025             STA $<span class="adr">E000</span>                                       ; *sigh* Forces Language Card to reload
                     026     DO DOS33B
 3FD6:20 76 3A       027             JSR <a class="x" href="#OFF80" >OFF80</a>                                       
 3FD9:4C 44 37       028             JMP <a class="x" href="#RCBACK">RCBACK</a>                                      </span>
@@ -1768,16 +1779,16 @@ TODO:
                     031         DS  3,0                                             </span>
                     032     FIN
                     033 *****************************
-3FDC:8D 63 2A       034 <a name="CLRBYTE"    >CLRBYTE     </a>STA TEMP1A                                      ; <span class="todo">TODO</span> called from?
-3FDF:8D 70 2A       035             STA CB          ;SET TYPE PARAM DEFAUTL=0       ; *spelling* DEFAULT
-3FE2:8D 71 2A       036             STA CB+1
+3FDC:8D 63 2A       034 <a name="CLRBYTE"    >CLRBYTE     </a>STA <a class="d" href="#TEMP1A">TEMP1A</a>                                      ; <span class="todo">TODO</span> called from <a href="#SOPTS">SOPTS</a>, Page 18, Line <span class="line">?</span>
+3FDF:8D 70 2A       035             STA <a class="d" href="#CB">CB</a>          ;SET TYPE PARAM DEFAUTL=0       ; *spelling* DEFAULT
+3FE2:8D 71 2A       036             STA <a class="d" href="#CB">CB</a>+1
 3FE5:60             037             RTS
                     038             SKP 4
-3FE6:20 5B 27       039 <a name="CLRSTS1"    >CLRSTS1     </a>JSR CLRSTS                                      ; <span class="todo">TODO</span> Clear ???
-3FE9:8C B7 2A       040             STY RSTATE      ;PREVENTS FOREVER 'FILE NOT FOUND'
+3FE6:20 5B 27       039 <a name="CLRSTS1"    >CLRSTS1     </a>JSR <a class="x" href="#CLRSTS">CLRSTS</a>                                      ; <span class="todo">TODO</span> Clear ???
+3FE9:8C B7 2A       040             STY <a class="d" href="#RSTATE">RSTATE</a>      ;PREVENTS FOREVER 'FILE NOT FOUND'
 3FEC:60             041             RTS             ; IN APPLESOFT
                     042 *****************************
-3FED:20 7E 2E       043 <a name="ERROR9X"    >ERROR9X     </a>JSR <a           href="#RTNFCB">RTNFCB</a>
+3FED:20 7E 2E       043 <a name="ERROR9X"    >ERROR9X     </a>JSR <a class="x" href="#RTNFCB">RTNFCB</a>
 3FF0:AE 9B 33       044             LDX <a class="d" href="#ENTSTK">ENTSTK</a>      ;GET STACK
 3FF3:9A             045             TXS             ;MESSY MESSY MESSY
 3FF4:20 16 23       046             JSR <a class="x" href="#CLALL">CLALL</a>       ;GO CLOSE EVERYBODY
